--- a/service.html
+++ b/service.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -9,12 +10,13 @@ So you have narrowed down on your choice of used car? Great!<br>
  It's time now to make payment and zip off in your dream car. <br>
 But what if you have trouble arranging money upfront? Perhaps,<br>
  you are still concerned about the used car being completely free of defects.<br>
- What if it breaks down or develops others issues such as a flat tyre – something that's inevitable and can occur any time.<br>
+ What if it breaks down or develops others issues such as a flat tyre â€“ something that's inevitable and can occur any time.<br>
  Don't worry, help is at hand. At CarDekho, you get a host of services that help you get around these problems and ensure a<br>
  tension-free used car buying and ownership experience. These include:<br>
 
 Used car loan<br>
 Used car certification and warranty<br>
 Roadside assistance.<br>
+ <a href="http://www.cardekho.com/car-customer-care-in-india.htm">Costomer care</a>
 </body>
 </html>
