--- a/click here.html
+++ b/click here.html
@@ -44,6 +44,6 @@ Rate This car<br>
     </div>
   </div>
 </div>
-  <a href="http://shop.cardekho.com/car-accessories.html">For more</a>
+  <a href="http://www.cardekho.com/newcars">For more</a>
 </body>
 </html>
