--- a/about.html
+++ b/about.html
@@ -33,8 +33,8 @@ To diversify our product offerings we have ventured into car insurance business 
 
 Investors and shareholders
 CarDekho.com, which went live in 2008, was set up by a bunch of young, enthusiastic IIT graduates. 
-Its investors include Google Capital, Tybourne Capital, Hillhouse Capital, Sequoia Capital, HDFC Bank, Ratan Tata and Times Internet.
-FOR MORE DETAILS :
+Its investors include Google Capital, Tybourne Capital, Hillhouse Capital, Sequoia Capital, HDFC Bank, Ratan Tata and Times Internet.<br><br>
+FOR MORE DETAILS :<br><br>
 <a href="http://www.cardekho.com/info/about_us">CLICK HERE</a>
 
 </body>
