--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@ crossorigin="anonymous"></script>
 	</header>
         
 </div>
+	<div class="navbar">
        <img src="car dekho.png" alt="symbol">
 	<img src="image.jpg" alt="Car Dekho">
 	<p>Find the perfect car for you!</p>
@@ -67,6 +68,7 @@ crossorigin="anonymous"></script>
 	<a href="contact.html">Contact</a>
 	<a href="service.html">Services</a>
         <a href="click here.html">click here</a>
+	</div>
 </body>
 </html>
 
