--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
             color: black;  
         }  
         #tribute-data {  
-            background-color: rgb(46, 139, 87, 0.25);  
+            background-color: rgb(orenge);  
             box-shadow: 20px 20px 20px #555755;  
             font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;  
             padding: 25px 25px;  
