--- a/index.html
+++ b/index.html
@@ -64,10 +64,12 @@ crossorigin="anonymous"></script>
        <img src="car dekho.png" alt="symbol">
 	<img src="image.jpg" alt="Car Dekho">
 	<p>Find the perfect car for you!</p>
+	<nav>	
 	<a href="about.html">About Us</a>
 	<a href="contact.html">Contact</a>
 	<a href="service.html">Services</a>
         <a href="click here.html">click here</a>
+	</nav>
 	</div>
 </body>
 </html>
