--- a/index.html
+++ b/index.html
@@ -71,29 +71,9 @@ crossorigin="anonymous"></script>
         <a href="click here.html">click here</a>
 	</nav>
 	</div>
+	<footer>
+		All reverse @ car dekho.com
+	</footer>
 </body>
 </html>
 
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Car Dekho - About Us</title>
-	<style>
-		body {
-			background-color: #f2f2f2;
-			font-family: Arial, sans-serif;
-			margin: 0;
-			padding: 0;
-		}
-		header {
-			background-color: #333;
-			color: #fff;
-			padding: 20px;
-			text-align: center;
-		}
-		h1 {
-			font-size: 36px;
-			margin: 0;
-		}
-		p {
-			font-size: 24px;
