--- a/index.html
+++ b/index.html
@@ -93,7 +93,38 @@ crossorigin="anonymous"></script>
             color: white;  
             text-align: center;  
             text-shadow: 5px 6px 10px black;  
-        }     
+		
+        }  
+		*{
+     box-sizing:border-box;
+     font-family: Arial, Helvetica, sans-serif;
+}
+body{
+     background: gray;
+}
+nav{
+     background:#594848;
+     width: 100%;
+     overflow:auto;
+  }
+  ul{
+     list-style: none;
+  }
+  li{
+     float: left;
+  }
+  nav a{
+     width: 120px;
+     display: block;
+     font-size: 20px;
+     text-align: center;
+     font-family: Arial, Helvetica, sans-serif;
+  }
+nav a:hover{
+     color: rgb(152, 48, 48);
+     background: #f2f2f2;
+     overflow: auto;
+}
     
 	</style>
 </head>
