--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ crossorigin="anonymous"></script>
 			max-width: 100%;
 		}
 		a {
-			background-color: #4CAF50;
+			
 			border: none;
 			color: #fff;
 			padding: 20px;
@@ -56,7 +56,7 @@ crossorigin="anonymous"></script>
             margin: 0;
         }   
         body {  
-            background: pink;
+            background: orange;
             width: 70%;  
             margin-left: auto;
             margin-right: auto;
@@ -95,7 +95,7 @@ crossorigin="anonymous"></script>
      font-family: Arial, Helvetica, sans-serif;
 }
 body{
-     background: gray;
+     background: white;
 }
 nav{
      background:#594848;
