--- a/index.html
+++ b/index.html
@@ -12,6 +12,35 @@ crossorigin="anonymous"></script>
 
 	<title>Car Dekho - Home</title>
 	<style>
+		header{
+			background-color:#333;
+			color:3fff;
+			padding:20px;
+			text-align:center;
+		}
+		h1{text-align:center;}
+		p{text-align:center;}
+		div{text-align:center}
+		.navbar{
+			background-color:#333;
+			color:#fff;
+			padding:10px;
+			margin:auto;
+		}
+		.navbar a{
+			color:#fff;
+			text-decoration:npne;
+			margin-right:10px;
+		}
+		.footer{
+			background-color:#333;
+			color:#ff;
+			padding:10px;
+			text-align:center;
+		}
+		.content{
+			padding:20px;
+		}
 		
     
 	</style>
