--- a/index.html
+++ b/index.html
@@ -10,60 +10,60 @@ crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" 
 crossorigin="anonymous"></script>
 
+	
 	<title>Car Dekho - Home</title>
 	<style>
-		header{
-			background-color:#333;
-			color:3fff;
-			padding:20px;
-			text-align:center;
+		body {
+			background-color: #f2f2f2;
+			font-family: Arial, sans-serif;
+			margin: 0;
+			padding: 0;
 		}
-		h1{text-align:center;}
-		p{text-align:center;}
-		div{text-align:center}
-		.navbar{
-			background-color:#333;
-			color:#fff;
-			padding:10px;
-			margin:auto;
+		header {
+			background-color: #333;
+			color: #fff;
+			padding: 20px;
+			text-align: center;
 		}
-		.navbar a{
-			color:#fff;
-			text-decoration:npne;
-			margin-right:10px;
+		h1 {
+			font-size: 48px;
+			margin: 0;
 		}
-		.footer{
-			background-color:#333;
-			color:#ff;
-			padding:10px;
-			text-align:center;
+		p {
+			font-size: 24px;
+			margin: 20px;
+			text-align: center;
 		}
-		.content{
-			padding:20px;
+		img {
+			display: block;
+			margin: 0 auto;
+			max-width: 100%;
 		}
-		
-    
+		a {
+			background-color: #4CAF50;
+			border: none;
+			color: #fff;
+			padding: 20px;
+			text-align: center;
+			text-decoration: none;
+			display: inline-block;
+			font-size: 24px;
+			margin: 20px;
+			cursor: pointer;
+			border-radius: 5px;
+		}
 	</style>
 </head>
 <body>
-	
-   
 	<header>
 		<h1>Car Dekho</h1>
 	</header>
-	<div class="navbar">
-       <img src="car dekho.png" alt="symbol">
-	<img src="image.jpg" alt="Car Dekho">
+	<img src="car-dekho.jpg" alt="Car Dekho">
 	<p>Find the perfect car for you!</p>
-	
 	<a href="about.html">About Us</a>
 	<a href="contact.html">Contact</a>
-	<a href="service.html">Services</a>
-        <a href="click here.html">click here</a>
-	</nav>
-	</div>
-	
-        
+	<a href="services.html">Services</a>
+
 
 	< div class="footer">
 		All reverse @ car dekho.com
