--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@ crossorigin="anonymous"></script>
 	<header>
 		<h1>Car Dekho</h1>
 	</header>
-	<img src="car-dekho.jpg" alt="Car Dekho">
+	<img src="car-dekho.png" alt="Car Dekho">
+	<img src="image 1.jpg" alt="Car Dekho">
 	<p>Find the perfect car for you!</p>
 	<a href="about.html">About Us</a>
 	<a href="contact.html">Contact</a>
