--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+   <!DOCTYPE html>
 <html>
 <head>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJ
@@ -64,11 +64,11 @@ crossorigin="anonymous"></script>
 	<a href="about.html">About Us</a>
 	<a href="contact.html">Contact</a>
 	<a href="services.html">Services</a>
-<a href="click here.html">More</a>
+    <a href="click here.html">More</a>
 
-	< div class="footer">
-		All reverse @ car dekho.com
-	</div>
+	<footer>
+		All reverse @car dekho.com
+	</footer>
 </body>
 </html>
 
