--- a/about.html
+++ b/about.html
@@ -55,15 +55,7 @@
 	</header>
 	<div class="navbar">
        <img src="car dekho.png" alt="symbol">
-
-	
-	
-	<a href="about.html">About Us</a>
-	<a href="contact.html">Contact</a>
-	<a href="service.html">Services</a>
-        <a href="click here.html">click here</a>
-	</nav>
-	</div>
+       </div>
 <b>About CarDekho</b><br>
 CarDekho.com is India's leading car search venture that helps users buy cars that are right for them.
  Its website and app carry rich automotive content such as expert reviews, detailed specs and prices, 
@@ -96,9 +88,15 @@ CarDekho.com, which went live in 2008, was set up by a bunch of young, enthusias
 Its investors include Google Capital, Tybourne Capital, Hillhouse Capital, Sequoia Capital, HDFC Bank, Ratan Tata and Times Internet.<br><br>
 FOR MORE DETAILS :<br><br>
 <a href="http://www.cardekho.com/info/about_us">CLICK HERE</a>
-     <div class="footer">
-          All revrse car dekho .com
-     </div>
+	<div>
+	<a href="about.html">About Us</a>
+	<a href="contact.html">Contact</a>
+	<a href="service.html">Services</a>
+        <a href="click here.html">More</a>
+		</div>
+    <footer>
+         <b> All revrse @ car dekho .com</b>
+   </footer>
 
 </body>
 </html>
