--- a/contact.html
+++ b/contact.html
@@ -50,6 +50,12 @@
     </style>  
 	</head>
 <body>
+	 <header>
+		<h1>Car Dekho</h1>
+	</header>
+	<div class="navbar">
+       <img src="car dekho.png" alt="symbol">
+       </div>
  	<fieldset>
       	<div>
           <fieldset>
