--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
             margin: 0;
         }   
         body {  
-            background: pink;
+            background: white;
             width: 70%;  
             margin-left: auto;
             margin-right: auto;
@@ -83,6 +83,15 @@
  	<fieldset>
 <button> <b> submit</b></button>
 </fieldset>
+		<div>
+	<a href="about.html">About Us</a>
+	<a href="contact.html">Contact</a>
+	<a href="service.html">Services</a>
+        <a href="click here.html">More</a>
+		</div>
+		<footer>
+			All reverse@ cardekho.com
+		</footer>
           
  </body>
  </html>
