--- a/service.html
+++ b/service.html
@@ -8,7 +8,7 @@
             margin: 0;
         }   
         body {  
-            background: pink;
+            background: white;
             width: 70%;  
             margin-left: auto;
             margin-right: auto;
@@ -49,6 +49,12 @@
     </style>  
 </head>
 <body>
+   <header>
+		<h1>Car Dekho</h1>
+	</header>
+	<div class="navbar">
+       <img src="car dekho.png" alt="symbol">
+       </div>
 <b>CarDekho's Exclusive Services For Used Car Buyers</b><br><br>
 So you have narrowed down on your choice of used car? Great!<br>
  It's time now to make payment and zip off in your dream car. <br>
