--- a/service.html
+++ b/service.html
@@ -67,6 +67,17 @@ But what if you have trouble arranging money upfront? Perhaps,<br>
 Used car loan<br>
 Used car certification and warranty<br>
 Roadside assistance.<br>
- <a href="http://www.cardekho.com/car-customer-care-in-india.htm">Costomer care</a>
+
+	<div>
+	<a href="about.html">About Us</a>
+	<a href="contact.html">Contact</a>
+	<a href="service.html">Services</a>
+        <a href="click here.html">More</a>
+	<a href="http://www.cardekho.com/car-customer-care-in-india.htm">Costomer care</a>
+		</div>
+    <footer>
+         <b> All revrse @ car dekho .com</b>
+   </footer>
+
 </body>
 </html>
