--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@ crossorigin="anonymous"></script>
 			cursor: pointer;
 			border-radius: 5px;
 		}
+		.content{
+			padding:20px;
+		}
 	</style>
 </head>
 <body>
