--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@ crossorigin="anonymous"></script>
 	<a href="contact.html">Contact</a>
 	<a href="services.html">Services</a>
     <a href="click here.html">More</a>
+	 <a href="http://www.cardekho.com/info/about_us">CLICK HERE</a>
 
 	<footer>
 		All reverse @car dekho.com
