--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@ crossorigin="anonymous"></script>
 		.content{
 			padding:20px;
 		}
+		.footer{
+			text-align:center;
+		}
 	</style>
 </head>
 <body>
