--- a/about.html
+++ b/about.html
@@ -89,7 +89,7 @@ Its investors include Google Capital, Tybourne Capital, Hillhouse Capital, Sequo
 FOR MORE DETAILS :<br><br>
 
 	<div>
-      <a href="http://www.cardekho.com/info/about_us">CLICK HERE</a>
+      <a href="http://www.cardekho.com/info/about_us">Click here for more</a>
 	<a href="about.html">About Us</a>
 	<a href="contact.html">Contact</a>
 	<a href="service.html">Services</a>
