--- a/contact.html
+++ b/contact.html
@@ -90,7 +90,7 @@
 	<a href="contact.html">Contact</a>
 	<a href="service.html">Services</a>
         <a href="click here.html">More</a>
-		
+	  <a href="http://www.cardekho.com/info/about_us">Click here for more</a>	
 		<footer>
 			All reverse@ cardekho.com
 		</footer>
