--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,48 @@
             color: white;  
             text-align: center;  
             text-shadow: 5px 6px 10px black;  
-        }     
+        }   
+		    <style>
+		body {
+			background-color: #f2f2f2;
+			font-family: Arial, sans-serif;
+			margin: 0;
+			padding: 0;
+		}
+		header {
+			background-color: #333;
+			color: #fff;
+			padding: 20px;
+			text-align: center;
+		}
+		h1 {
+			font-size: 48px;
+			margin: 0;
+		}
+		p {
+			font-size: 24px;
+			margin: 20px;
+			text-align: center;
+		}
+		img {
+			display: block;
+			margin: 0 auto;
+			max-width: 100%;
+		}
+		a {
+			background-color: #4CAF50;
+			border: none;
+			color: #fff;
+			padding: 20px;
+			text-align: center;
+			text-decoration: none;
+			display: inline-block;
+			font-size: 24px;
+			margin: 20px;
+			cursor: pointer;
+			border-radius: 5px;
+		}
+	</style>
     </style>  
 	</head>
 <body>
