--- a/contact.html
+++ b/contact.html
@@ -97,7 +97,7 @@
 	<div class="navbar">
        <img src="car dekho.png" alt="symbol">
        </div>
- 	
+ 	<fieldset>
       	<div>
           <fieldset>
                <h1><b><u>login here to contact us</u></b></h1>
@@ -125,10 +125,10 @@
 <button> <b> submit</b></button>
 </fieldset>
 		
-		
+	</fieldset>	
 		
 	<a href="about.html">About Us</a>
-	<a href="contact.html">Contact</a>
+	<a href="index.html">Home</a>
 	<a href="service.html">Services</a>
         <a href="click here.html">More</a>
 	  <a href="http://www.cardekho.com/info/about_us">Click here for more</a>	
