--- a/about.html
+++ b/about.html
@@ -90,7 +90,7 @@ FOR MORE DETAILS :<br><br>
 
 	<div>
       <a href="http://www.cardekho.com/info/about_us">Click here for more</a>
-	<a href="about.html">About Us</a>
+	<a href="index.html">Home</a>
 	<a href="contact.html">Contact</a>
 	<a href="service.html">Services</a>
         <a href="click here.html">More</a>
