--- a/service.html
+++ b/service.html
@@ -109,10 +109,10 @@ Used car loan<br>
 Used car certification and warranty<br>
 Roadside assistance.<br>
 
-	
+	<a href="index.html">Home</a>
 	<a href="about.html">About Us</a>
 	<a href="contact.html">Contact</a>
-	<a href="service.html">Services</a>
+	
         <a href="click here.html">More</a>
 	<a href="http://www.cardekho.com/car-customer-care-in-india.htm">Costomer care</a>
 		
