--- a/click here.html
+++ b/click here.html
@@ -7,7 +7,7 @@
             margin: 0;
         }   
         body {  
-            background: pink;
+            background:white;
             width: 70%;  
             margin-left: auto;
             margin-right: auto;
@@ -87,7 +87,11 @@ Rate This car<br>
       <small class="text-muted">Last updated 3 mins ago</small>
     </div>
   </div>
-</div>
+
+   <a href="index.html">Home</a>
+	<a href="contact.html">Contact</a>
+	<a href="service.html">Services</a>
+        <a href="click here.html">More</a>
   <a href="http://www.cardekho.com/newcars">For more</a>
 </body>
 </html>
