--- a/click here.html
+++ b/click here.html
@@ -48,6 +48,12 @@
     </style>  
 </head>
 <body>
+	 <header>
+		<h1>Car Dekho</h1>
+	</header>
+	<div class="navbar">
+       <img src="car dekho.png" alt="symbol">
+       </div>
 
 <div class="card-group">
   <div class="card">
