--- a/about.html
+++ b/about.html
@@ -47,6 +47,12 @@
 			cursor: pointer;
 			border-radius: 5px;
 		}
+	      footer {
+			background-color: #333;
+			color: #fff;
+			padding: 20px;
+			text-align: center;
+		}
 	</style>
 
 <body>
