--- a/index.html
+++ b/index.html
@@ -55,6 +55,12 @@ crossorigin="anonymous"></script>
 		.content{
 			padding:20px;
 		}
+		 footer {
+			background-color: #333;
+			color: #fff;
+			padding: 20px;
+			text-align: center;
+		}
 		.footer{
 			text-align:center;
 		}
