--- a/service.html
+++ b/service.html
@@ -46,7 +46,7 @@
             text-align: center;  
             text-shadow: 5px 6px 10px black;  
         }   
-	  <style>
+	
 		body {
 			background-color: #f2f2f2;
 			font-family: Arial, sans-serif;
@@ -86,7 +86,13 @@
 			cursor: pointer;
 			border-radius: 5px;
 		}
-	</style>
+	   footer {
+			background-color: #333;
+			color: #fff;
+			padding: 20px;
+			text-align: center;
+		}
+	
     </style>  
 </head>
 <body>
