--- a/contact.html
+++ b/contact.html
@@ -87,7 +87,14 @@
 			cursor: pointer;
 			border-radius: 5px;
 		}
-	</style>
+		     footer {
+			background-color: #333;
+			color: #fff;
+			padding: 20px;
+			text-align: center;
+		}
+	
+	
     </style>  
 	</head>
 <body>
