--- a/click here.html
+++ b/click here.html
@@ -45,6 +45,13 @@
             text-align: center;  
             text-shadow: 5px 6px 10px black;  
         }     
+	    footer {
+			background-color: #333;
+			color: #fff;
+			padding: 20px;
+			text-align: center;
+		}
+	
     </style>  
 </head>
 <body>
