--- a/click here.html
+++ b/click here.html
@@ -105,6 +105,6 @@ Rate This car<br>
 	<a href="contact.html">Contact</a>
 	<a href="service.html">Services</a>
         <a href="click here.html">More</a>
-  <a href="http://www.cardekho.com/newcars">For more</a>
+  <a href="http://www.cardekho.com/newcars">For new cars</a>
 </body>
 </html>
