--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@ crossorigin="anonymous"></script>
 			color: #fff;
 			padding: 20px;
 			text-align: center;
+			 margin:bottem;
 		}
 		.footer{
 			text-align:center;
