--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@ crossorigin="anonymous"></script>
 	<title>Car Dekho - Home</title>
 	<style>
 		body {
+			 background-image:linear-gradient(orange,white);
 			background-color: #f2f2f2;
 			font-family: Arial, sans-serif;
 			margin: 0;
