--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 	<title>Car Dekho - Home</title>
 	<style>
 		body {
-			background-color: #f2f2f2;
+			background-image: linear-gradient(rgb(172, 64, 21),white);
 			font-family: Arial, sans-serif;
 			margin: 0;
 			padding: 0;
