--- a/service.html
+++ b/service.html
@@ -7,7 +7,7 @@
        
 	
 		body {
-			background-color: #f2f2f2;
+			background-image: linear-gradient(rgb(172, 64, 21),white);
 			font-family: Arial, sans-serif;
 			margin: 0;
 			padding: 0;
