--- a/click here.html
+++ b/click here.html
@@ -4,7 +4,13 @@
 <title> click here</title>
    <style>      
          
-       
+       body {
+			background-image: linear-gradient(rgb(172, 64, 21),white);
+			font-family: Arial, sans-serif;
+			margin: 0;
+			padding: 0;
+		}
+
         #title {  
             text-align: center;  
             text-shadow: 5px 5px 10px white;  
@@ -49,21 +55,24 @@
     <div class="card-footer">
       <small class="text-muted">Last updated 3 mins ago</small>
     </div>
+	  
+	   <a href="https://www.autocarindia.com/cars/toyota/fortuner#.">Shop now</a>
   </div>
   <div class="card">
     <img src="image 1.jpg" class="card-img-top" alt="...">
     <div class="card-body">
       <h5 class="card-title">MAHINDRA SCORPIO  </h5>
-      <p class="card-text">Mahindra Scorpio N
+      <p class="card-text">Mahindra Scorpio 
 4.2
 1104 ratings
 Rate This car<br>
-? 13.05 Lakh - ? 24.51 Lakh *Price Breakup<br>
+ 13.05 Lakh - ? 24.51 Lakh *Price Breakup<br>
 *Ex-showroom Price in New Delhi </p><br>
     </div>
     <div class="card-footer">
       <small class="text-muted">Last updated 3 mins ago</small>
     </div>
+	    <a href="https://www.autocarindia.com/cars/toyota/fortuner#.">Shop now</a>
   </div>
   <div class="card">
     <img src="image 2.jpg" class="card-img-top" alt="...">
@@ -76,6 +85,7 @@ Rate This car<br>
     <div class="card-footer">
       <small class="text-muted">Last updated 3 mins ago</small>
     </div>
+	    <a href="https://www.autocarindia.com/cars/toyota/fortuner#.">Shop now</a>
   </div>
 
    <a href="index.html">Home</a>
