--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ crossorigin="anonymous"></script>
 	<title>Car Dekho - Home</title>
 	<style>
 		body {
-			 background-image:linear-gradient(orange,white);
+			 background-image: linear-gradient(rgb(172, 64, 21),white);
 			background-color: #f2f2f2;
 			font-family: Arial, sans-serif;
 			margin: 0;
@@ -61,7 +61,7 @@ crossorigin="anonymous"></script>
 			color: #fff;
 			padding: 20px;
 			text-align: center;
-			 margin:bottem;
+			 margin:bottom;
 		}
 		.footer{
 			text-align:center;
