--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
         
 		   
 		body {
-			background-color: #f2f2f2;
+			background-image: linear-gradient(rgb(250, 162, 140),white);
 			font-family: Arial, sans-serif;
 			margin: 0;
 			padding: 0;
