--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ crossorigin="anonymous"></script>
 	<p>Find the perfect car for you!</p>
 	<a href="about.html">About Us</a>
 	<a href="contact.html">Contact</a>
-	<a href="services.html">Services</a>
+	<a href="service.html">Services</a>
     <a href="click here.html">More</a>
 	 <a href="http://www.cardekho.com/info/about_us">CLICK HERE</a>
 
