--- a/about.html
+++ b/about.html
@@ -2,10 +2,9 @@
 <html>
 <head>
      <title> about us </title>
-      <style>      
-      <!DOCTYPE html>
-<html>
-<head>
+            
+      
+</head>
 	<title>Car Dekho - Home</title>
 	<style>
 		body {
