--- a/click here.html
+++ b/click here.html
@@ -4,9 +4,8 @@
 <title> click here</title>
    <style>      
          
-      body {
-			 background-image: linear-gradient(rgb(250, 162, 140),white);
-			background-color: #f2f2f2;
+     body {
+			background-image: linear-gradient(rgb(250, 162, 140),white);
 			font-family: Arial, sans-serif;
 			margin: 0;
 			padding: 0;
@@ -26,16 +25,31 @@
 			margin: 20px;
 			text-align: center;
 		}
-		
-		 footer {
+		img {
+			display: block;
+			margin: 0 auto;
+			max-width: 100%;
+		}
+		a {
+			background-color: #4CAF50;
+			border: black;
+			color: #fff;
+			padding: 20px;
+			text-align: center;
+			text-decoration: none;
+			display: inline-block;
+			font-size: 24px;
+			margin: 20px;
+			cursor: pointer;
+			border-radius: 5px;
+		}
+	      footer {
 			background-color: #333;
 			color: #fff;
 			padding: 20px;
 			text-align: center;
-			 margin:bottom;
 		}
-		
-    </style>  
+	</style>
 </head>
 <body>
 	 <header>
@@ -54,11 +68,11 @@
     </div>
     <div class="card-footer">
       <small class="text-muted">Last updated 3 mins ago</small>
+	    <div>
 	     <a href="https://www.autocarindia.com/cars/toyota/fortuner#.">Shop now</a>
+		     </div>
     </div>
-	  
-	
-  </div>
+ </div>
   <div class="card">
     <img src="image 1.jpg" class="card-img-top" alt="...">
     <div class="card-body">
