--- a/click here.html
+++ b/click here.html
@@ -20,6 +20,10 @@
 			font-size: 48px;
 			margin: 0;
 		}
+	       h5{
+		       margin:20px;
+		       text-align: center;
+	       }
 		p {
 			font-size: 24px;
 			margin: 20px;
@@ -30,6 +34,11 @@
 			margin: 0 auto;
 			max-width: 100%;
 		}
+	        .a{
+			background-color:red;
+			margin-left:50px;
+			margin-right:50px;
+		}
 		a {
 			background-color: #4CAF50;
 			border: black;
@@ -38,7 +47,7 @@
 			text-align: center;
 			text-decoration: none;
 			display: inline-block;
-			font-size: 24px;
+	                 		font-size: 24px;
 			margin: 20px;
 			cursor: pointer;
 			border-radius: 5px;
