--- a/click here.html
+++ b/click here.html
@@ -36,7 +36,8 @@
 		}
 	        .a{
 			background-color:red;
-			margin-left:50px;
+			color: red;
+			margin-left:70px;
 			margin-right:50px;
 		}
 		a {
