--- a/click here.html
+++ b/click here.html
@@ -110,7 +110,7 @@ Rate This car<br>
     </div>
     <div class="card-footer">
      
-	    <a> href="https://www.autocarindia.com/cars/toyota/fortuner#.">Shop now</a>
+	    <a href="https://www.autocarindia.com/cars/toyota/fortuner#.">Shop now</a>
     </div>
 	    
   </div>
