--- a/click here.html
+++ b/click here.html
@@ -36,9 +36,10 @@
 		}
 	        .button{
 			background-color:red;
-			color: red;
-			margin-left:100px;
-			margin-right:50px;
+			color:white;
+			text-align: center;
+			margin-left:50%;
+			margin-right:50%;
 		}
 		a {
 			background-color: #4CAF50;
