--- a/click here.html
+++ b/click here.html
@@ -40,6 +40,7 @@
 			text-align: center;
 			margin-left:50%;
 			margin-right:50%;
+			text-decoration: none;
 		}
 		a {
 			background-color: #4CAF50;
