--- a/click here.html
+++ b/click here.html
@@ -35,12 +35,19 @@
 			max-width: 100%;
 		}
 	        .button{
-			background-color:red;
+			background-color:blue;
 			color:white;
 			text-align: center;
-			margin-left:50%;
+			margin-left:60%;
 			margin-right:50%;
+			padding: 20px;
+			text-align: center;
 			text-decoration: none;
+			display: inline-block;
+	                 		font-size: 24px;
+			margin: 20px;
+			cursor: pointer;
+			border-radius: 5px;
 		}
 		a {
 			background-color: #4CAF50;
@@ -122,5 +129,8 @@ Rate This car<br>
 	<a href="service.html">Services</a>
         <a href="click here.html">More</a>
   <a href="http://www.cardekho.com/newcars">For new cars</a>
+	 <footer>
+         <b> All revrse @ car dekho .com</b>
+   </footer>
 </body>
 </html>
