--- a/click here.html
+++ b/click here.html
@@ -35,10 +35,10 @@
 			max-width: 100%;
 		}
 	        .button{
-			background-color:blue;
+			background-color:orange;
 			color:white;
 			text-align: center;
-			margin-left:60%;
+			margin-left:50%;
 			margin-right:50%;
 			padding: 20px;
 			text-align: center;
